frontend/src/App.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Rubik:wght@300;400;500;600;700;800;900&display=swap');

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

:root {
  box-sizing: border-box;
  font-family: 'Rubik', sans-serif;
  --green: rgb(42, 162, 42);
}

#root {
  max-width: 100vw;
  min-height: 100vh;
}

.App {
  text-align: center;
  display: flex;
  flex-direction: column;
  gap: 1rem;
  padding: 2rem 2rem;
  background-color: #14191F;
  color: #F5F5F5;
}

/* Wishlist */
.wishlist-container {
  display: flex;
  flex-direction: column;
}

.wishlist-games-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.wishlist-card {
  display: flex;
  flex-direction: column;
  gap: 0.6rem;
  width: 25rem;
  border: 1px solid black;
  padding: 0.5rem;
  border-radius: 0.5rem;
}

.wishlist-card-image {
  cursor: pointer;
}

/* Genre Filter Tags */
.genre-tags-container {
  display: flex;
  justify-content: center;
}

.genre-active {
  background-color: green;
}

/* Sort Tags */
.sort-active {
  background-color: yellow;
}

/* Pagination */
.active-page {
  font-weight: 500;
  text-decoration: underline;
}

/* Search Bar */
.InputLeft {
  left: 3rem !important;
}

/* Active Tab Styles */
.activeTab {
  color: #F5F5F5;
}

